<?xml version="1.0"?>
<package format="2">
  <name>watercolumn_layer_tracker</name>
  <version>0.0.0</version>
  <description>Tool for tracking layers in watercolum data</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>marine_acoustic_msgs</depend>
  <depend>project11_msgs</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>

